--- a/responsive.css
+++ b/responsive.css
@@ -1,70 +1,63 @@
-/* font input = lato */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-/* font-family: "Lato", sans-serif; */
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Lato", sans-serif;
+.none{
+    display: none;
 }
-body{
-    overflow-x: hidden;
-}
-
-/* font variabal */
+@media screen and (max-width:576px) {
+    /* font variabal */
 .h_b_text_1{
-    font-size: 80px;
+    font-size: 40px;
     color: #272727;
     font-weight: 800;
 }
 .h_b_text_2{
-    font-size: 40px;
+    font-size: 25px;
     color: #272727;
     font-weight: 800;
 }
 .h_b_text_2_w{
-    font-size: 40px;
+    font-size: 30px;
     color: #ffffff;
     font-weight: 800;
 }
 
 .h_b_text_3{
-    font-size: 24px;
+    font-size: 20px;
     color: #272727;
     font-weight: 700;
 }
 .h_name_service{
-    font-size: 24px;
+    font-size: 20px;
     color: #27272780;
     font-weight: 600;
 }
 .h_name_service_b{
-    font-size: 24px;
+    font-size: 20px;
     color: #272727;
     font-weight: 600;
 }
 .p_18{
-    font-size: 18px;
+    font-size: 15px;
     color: #272727;
 }
 .p_s_18{
 color: rgba(39, 39, 39, 0.6);
 font-family: Lato;
-font-size: 18px;
+font-size: 15px;
 font-weight: 400;
 }
 .p_s_18_w{
 color: rgba(255, 255, 255, 0.9);
 font-family: Lato;
-font-size: 18px;
+font-size: 15px;
 font-weight: 400;
 }
 .p_s_16_w{
     color: rgba(255, 255, 255, 0.4);
 font-family: Lato;
-font-size: 16px;
+font-size: 13px;
 font-weight: 400;
+}
+.center{
+    text-align: center;
 }
 .d_w{
     width: 100%;
@@ -82,205 +75,209 @@ font-weight: 400;
     border-radius: 8px;
     color: #fff;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
+    cursor: pointer;
+}
+.btn_prymary_s{
+    padding: 10px 20px;
+    background-color: #e55473;
+    border: none;
+    border-radius: 8px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
     cursor: pointer;
 }
 
-/* header section design */
+    /* header section design */
 .header{
-    max-width: 1920px;
-    max-height: 850px;
+    width: 100vw;
+    height: auto;
     background-color: #e5547310;
 }
 .header_box{
-    width: 1440px;
-    height: 850px;
+    width: 100%;
+    height: auto;
     margin: auto;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    background-image: url("./images/banner-image.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* background-position: bottom center; */
 
 }
 .header_box>div{
-    width: 700px;
+    width:100%;
     height: 100%;
 }
 .header_text{
+    padding:100px 5px 5px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: column; 
+    justify-content: space-between;
+    align-items: center;
     row-gap: 32px;
+    z-index: 1;
 }
 .header_img{
-    background-image: url("./images/banner-image.png");
-    background-repeat: no-repeat;
-    background-position: bottom right;
+    background-image: none;
 }
 /* main section  feature*/
 .feature{
-    margin: 178px auto 0;
-    width: 1440px;
-    height: 765px;
+    margin: 50px auto 0;
+    width: 100vw;
+    height: auto;
 }
 .feature_text{
-    width: 594px;
-    height: 132px;
+    width: 90%;
+    height: auto;
     margin: auto;
     text-align: center;
     margin-bottom: 48px;
 }
 .feature_content{
-    width: 100%;
-    height: 605px;
+    width: 95%;
+    height:auto;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
 .feature_content>div{
-    width: 464px;
-    height: 605px;
+    width: 90%;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
 .feature_item1>div{
-    width: 464px;
-    height: 538px;
+    width: 90%;
+    height: 338px;
+    background-size: cover;
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
     background-image: url('./images/featured1.png');
     background-repeat: no-repeat;
-    background-position: bottom center;
 }
 .feature_item2>div{
-    width: 464px;
-    height: 538px;
+    width: 90%;
+    height: 338px;
+    background-size: cover;
     border-radius: 300px 300px 0px 0px;
     background: rgba(5, 151, 160, 0.15);
     background-image: url('./images/featured2.png');
     background-repeat: no-repeat;
-    background-position: center center;
 }
 .feature_item3>div{
-    width: 464px;
-    height: 538px;
+    width: 90%;
+    height: 338px;
+    background-size: cover;
     border-radius: 300px 300px 0px 0px;
     background: rgba(71, 125, 17, 0.15);
     background-image: url('./images/featured3.png');
     background-repeat: no-repeat;
-    background-position: bottom center;
 }
-
 /* support section */
 .support{
-margin: 128px auto 0;
-width: 1440px;
-height: 320px;
-border-radius: 8px;
-background: rgba(39, 39, 39, 0.05);
-display: flex;
-justify-content: center;
-align-items: center;
-}
-.support_box{
-    width: 1090px;
+    margin: 50px auto 0;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    .support_box{
+        width: 1090px;
+        height: 147px;
+        display: flex;
+        flex-direction: column;
+        row-gap: 30px;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .support_box>div{
+    width: 372px;
     height: 147px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-}
-.support_box>div{
-width: 372px;
-height: 147px;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-align-items: center;
-}
-
-/* deal */
+    background: rgba(39, 39, 39, 0.05);
+    border: 1px solid rgb(116, 116, 116);
+    }
+    /* deal */
 .deal{
-    width: 100vw;
-    height: 620px;
-    margin: 128px auto 0;
+    width: 98vw;
+    height: auto;
+    margin: 300px auto 0;
+    padding: 10px 0;
     border-radius: 8px;
-    background: rgba(229, 84, 115, 0.05);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .deal_box{
-    width: 1090px;
-    height:420px;
+    width: 90%;
+    height:auto;
     display: flex;
+    flex-direction: column-reverse;
     justify-content: space-between;
     align-items: center;
 }
 .deal_text{
-    width: 594px;
-height: 228px;
+    width: 100%;
+height: auto;
 display: flex;
 flex-direction: column;
-justify-content: space-between;
+row-gap: 20px;
 align-items: center;
 }
 .deal_img{
-    width: 318px;
-height: 420px;
+    width: 50%;
+height: 220px;
 background-image: url("./images/sale-0ff.png");
 background-repeat: no-repeat;
-background-position: center;
+background-position: none;
+background-size: cover;
 }
 /* instagram section */
 .instagram{
     margin: 128px auto 0;
-    width: 1440px;
-    height: 570px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    width: 100vw;
+    height:auto;
+    row-gap: 20px;
 }
 .instagram_text{
-    width: 594px;
-    height: 132px;
+    width: 90%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
 }
 .instagram_content{
     width: 100%;
-    height: 396px;
+    height: auto;
     display: flex;
+    flex-direction: column;
+    row-gap: 10px;
     justify-content: space-between;
 }
 .instagram_content>div{
 width: 342px;
 height: 396px;
+margin: auto;
+border-radius: 10px;
 }
-.instagram_item1{
-    background-image: url("./images/insta1.png");
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.instagram_item2{
-    background-image: url("./images/insta2.png");
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.instagram_item3{
-    background-image: url("./images/insta3.png");
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.instagram_item4{
-    background-image: url("./images/insta4.png");
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
 /* section latest */
 .latest{
-    margin: 128px auto 0;
-    width: 1440px;
-    height: 449px;
+    margin: 50px auto 0;
+    padding: 40px 0;
+    width: 100vw;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -289,8 +286,8 @@ height: 396px;
     background-size: cover;
 }
 .latest_box{
-width: 866px;
-height: 206px;
+width: 90%;
+height: auto;
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -302,35 +299,33 @@ align-items: center;
     height: 94px;
     display: flex;
 flex-direction: column;
-justify-content: space-between;
+justify-content:center;
 align-items: center;
 }
+form{
+    text-align: center;
+}
 #email{
-width: 650px;
-height: 64px;
-border-radius: 8px;
+    margin-bottom: 20px;
+width: 95%;
+height: 30px;
+border-radius: 5px;
 background: rgb(255, 255, 255);
 border: none;
 box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 outline: none;
 }
 ::placeholder{
-    font-size: 24px;
+    font-size:15px;
     color: #27272780;
     font-weight: 600;
-    padding: 0 0 0 22px;
 }
-#email:focus{
-    outline-color: #e55473;
-outline-style: solid;
-outline-width: 1px;
-}
-
 /* footer */
 .footer{
-    margin: 128px auto 0;
+    margin: 50px auto 0;
     width: 100vw;
-    height: 449px;
+    height: auto;
+    padding: 40px 0;
     background: rgb(17, 16, 16);
     display: flex;
     align-items: center;
@@ -338,7 +333,7 @@ outline-width: 1px;
     row-gap: 24px;
 }
 .footer_box{
-    width: 625px;
+    width: 90%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -346,3 +341,4 @@ outline-width: 1px;
     row-gap: 24px;
 }
 /* footer complete */
+}
