--- a/responsive.css
+++ b/responsive.css
@@ -88,7 +88,9 @@ font-weight: 400;
     font-size: 18px;
     cursor: pointer;
 }
-
+body{
+    overflow-x: hidden;
+}
     /* header section design */
 .header{
     width: 100vw;
